# mPython3-IDE-Enhanced

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  package.json  tailwind.config.cjs
.github/workflows/: ci.yml  pages.yml
data/: README.md  catalog.full.json  catalog.index.json  catalog.meta.json  toolbox.visible.json
data/knowledge/: antipatterns.json  group-version.json  index.json  patterns.md  v2.md  v3.md
e2e/: agent-ask.e2e.mjs  agent-edit.e2e.mjs  agent-rewind.e2e.mjs  agent-smoke.e2e.mjs  filepanel.e2e.mjs  inject.e2e.mjs  patch.e2e.mjs  probe.mjs  runtime.e2e.mjs
e2e/helpers/: fakeDevice.mjs
eval/: run-eval.mjs  tasks.json
serial-proxy/: README.md  m3e_serial_proxy.py  pyproject.toml  test_proxy.py
src/: main.mjs  pipeline.mjs
src/agent/: commands.mjs  history.mjs  loop.mjs
src/ctx/: agent-prompt.mjs  assemble.mjs  cards.mjs  fewshot.mjs  prompts.mjs
src/host/: filePanel.mjs  font.mjs  hostBridge.mjs  hostFontFix.mjs  inject.mjs  lock.mjs  ops.mjs  read.mjs  renderBlocks.mjs  run.mjs  serialProxy.mjs  termFix.mjs  termFont.mjs
src/ir/: expr.mjs
src/kb/: knowledge.mjs  retriever.mjs
src/llm/: client.mjs  extract.mjs  repair.mjs
src/runtime/: data.mjs  log.mjs
src/ui/: blockTree.mjs  fontsModern.generated.mjs  fontsModern.mjs  iconsMicro.mjs  panel.mjs  panelModern.entry.mjs  panelModern.mjs  tailwind.css  (+3 more)
tools/: build-bookmarklet.mjs  build-catalog.mjs  build-css.mjs  build-css.modern.mjs  build-fonts.modern.mjs  build-knowledge.mjs  build-term-font.mjs  build-visible-from-vendor.mjs  dump-toolbox.mjs
(+41 files in other folders)
