[project]
name = "m3e-serial-proxy"
version = "0.1.0"
description = "mPython3 IDE 本地串口代理：通过 WebSocket 把浏览器 Web Serial 垫片接到真实 USB 串口（pyserial），让 Firefox 等也能连掌控板。"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "pyserial>=3.5",
    "websockets>=12",
]

[project.scripts]
m3e-serial-proxy = "m3e_serial_proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["m3e_serial_proxy.py"]
